[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Enemies/Mage.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies/Enemy_mage.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/Enermies/Spell.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prefabs/Enermies/Body_knight.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 2 )

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "wake_up"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Character:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 1 ), Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 1 ), Vector2( 1.05, 0.95 ), Vector2( 1, 1 ), Vector2( 0.8, 1 ), Vector2( 1.05, 0.95 ), Vector2( 1, 1 ) ]
}

[node name="Enemy_mage" type="KinematicBody2D" groups=["Enemies"]]
script = ExtResource( 2 )
body = ExtResource( 4 )
spell = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Roam_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Wait_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Character" type="Node2D" parent="."]

[node name="Sprites" type="Node2D" parent="Character"]

[node name="Sprite" type="Sprite" parent="Character/Sprites"]
texture = ExtResource( 1 )
offset = Vector2( 0, -16 )

[node name="Anims" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 4 )
anims/wake_up = SubResource( 5 )
anims/walk = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 248, 224 )
scale = Vector2( 24.8, 23.2 )
rect = Rect2( -20, -20, 20, 20 )

[connection signal="timeout" from="Roam_timer" to="." method="_on_Roam_timer_timeout"]
[connection signal="timeout" from="Wait_timer" to="." method="_on_Wait_timer_timeout"]
